@@ -1,3 +1,8 @@
+Fri Feb 17 20:36:11 GMT 2012  Lee Noar  <leenoar@sky.com>
+
+	* unistd/symlink.c(symlink): Implement writing of symlink
+	files.
+
 Sun Feb 12 14:33:56 GMT 2012  Lee Noar  <leenoar@sky.com>
 
 	* signal/post.c: Remove debug code.
